# kernelworx

./: .dockerignore  .env.example  .gitignore  AGENT.md  DYNAMODB_RESTRUCTURING.md  Dockerfile  LICENSE  LOCALSTACK.md  Makefile  PHASE3_DEPLOYMENT_ISSUE.md  README.md  TODO.md  TODO_SIMPLIFY_LAMBDA.md  cspell.json  deploy-localstack.sh  package-lock.json  package.json  pyproject.toml  security_review.md  vitest.config.ts  vitest.global.teardown.ts  vitest.workspace.ts
.cspell/: kernelworx-words.txt
.github/: FUNDING.yml  copilot-instructions.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  deploy-prod.yml  nightly.yml  sync-dns.yml
.serena/: project.yml
cdk/: README_UV.md  app.py  brand-modify-and-capture.sh  brand-playground.sh  branding-baseline.json  build-lambda-layer.sh  deploy-cognito-branding.sh  deploy.sh  generate_sms_role_import.py  import-resources-phase1.json  import-resources-phase2.json  import-resources.json  main.py  package-lock.json  package.json  pyproject.toml  run-branding-variants.sh
cdk/assets/: cognito-logo-base64.txt  convert_logo.py  favicon-base64.txt  managed-login-settings.json  managed-login-settings.playground.json  managed-login-settings.playground2.json
cdk/cdk/: appsync.py  auth.py  cdk_stack.py  cleanup_hook.py  cloudfront_site.py  dynamodb_tables.py  helpers.py  iam_roles.py  lambdas.py  resource_lookup.py
cdk/schema/: schema.graphql
docs/: BRANDING_GUIDE.html  BRANDING_GUIDE.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  SCHEMA.md  VTL_RESOLVER_NOTES.md
docs/branding/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  DESIGN.md  README.md  brand.html  brand.json  guide.md
frontend/: .env.example  .env.production  .gitignore  LOCAL_DEV.md  TESTING.md  deploy.sh  eslint.config.js  index.html  package-lock.json  package.json  playwright-capture.js  playwright-interactive.js  playwright.config.ts  run-tests.js  vite.config.ts
frontend/playwright-report/: index.html
frontend/scripts/: take-home-screenshot.cjs  take-mobile-screenshots.cjs  take-reports-screenshot.cjs
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/test-results/: .last-run.json
scripts/: capture-screenshots.py  contrast_check.py  create-screenshot-user.sh  delete-screenshot-user.sh  fix_season_names.py  manage-tables.sh  migrate_season_year.py  sync-to-cloudflare.sh  test_graphql_queries.sh  update-integration-env.sh
src/: __init__.py
src/utils/: auth.py  (+6 more)
tests/: __init__.py  test_profile_sharing.py  test_report_generation.py
tofu/: .kics.yml  README.md
(+521 files in other folders)
