[project]
name = "kernelworx"
version = "0.1.0"
description = "Popcorn Sales Manager - Lambda functions and backend code"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=14.3.0",
    "boto3>=1.35.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "boto3-stubs[dynamodb,s3,lambda,sns,ses]>=1.41.5",
    "isort>=7.0.0",
    "moto[dynamodb,s3,lambda,sns,ses]>=5.1.17",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "types-openpyxl>=3.1.5.20250919",
    "radon>=6.0.1",
]

[tool.ruff]
line-length = 120
# Use Ruff for linting and formatting. Run `ruff check` and `ruff format` to apply fixes.

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aws_cdk"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aws_cdk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "constructs"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: no branch",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2

[tool.radon]
# Cyclomatic complexity thresholds:
# A (1-5): Low - simple block ✓ REQUIRED
# B (6-10): Low - well-structured block  
# C (11-20): Moderate - slightly complex block
# D (21-30): More than moderate - more complex block
# E (31-40): High - complex block, alarming
# F (41+): Very high - error-prone, unstable block
#
# POLICY: All functions must be Grade A (complexity <= 5)
# Run: uv run radon cc src/ cdk/cdk/ -a -s --total-average
# Check for violations: uv run radon cc src/ cdk/cdk/ -a -nb (shows B or worse)
# CI check: uv run radon cc src/ cdk/cdk/ --total-average -nb --json | jq 'to_entries | map(select(.value | length > 0)) | length' (should be 0)
cc_min = "A"
show_complexity = true
average = true
